# mandelbrot

./: .gitignore  Cargo.toml  NOTICE  README.md  REQUIREMENTS.md  SOURCES.md  TODO.md
.github/workflows/: rust.yml
benches/: bench.rs
dev/bench/: data.js
docs/: MVC.md  points.txt
src/: coloring.rs  complex.rs  complex_plane.rs  config.rs  image_parameters.rs  key_bindings.rs  lib.rs  main.rs  mandelbrot_set.rs  mandeljort_set.rs  pixel_buffer.rs  rendering.rs  true_color.rs  user_input.rs
src/controller/: config.rs  interaction_variables.rs  key_bindings.rs  minifb_controller.rs  minifb_key_bindings.rs  minifb_mouse_click_recorder.rs  mod.rs
src/model/: coloring.rs  complex_plane.rs  mandelbrot_function.rs  mandelbrot_model.rs  mod.rs  pixel_buffer.rs  pixel_plane.rs  rendering.rs
src/pixel_buffer/: pixel_plane.rs
src/view/: image.rs  minifb_mandelbrot_view.rs  mod.rs  terminal.rs
