[package]
name = "mandelbrot"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/jortrr/mandelbrot"
readme = "README.md"
license = "LICENSE"
description = "Mandelbrot by Jort, Mandelbrot set viewer written in Rust"
keywords = ["mandelbrot", "mandelbrot-set"]
categories = ["mathematics", "rendering", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angular-units = "0.2.4"
chrono = "0.4.26"
lazy_static = "1.4.0"
minifb = "0.25.0"
num = "0.4.0"
num_cpus = "1.15.0"
png = "0.17.9"
prisma = "0.1.1"
rand = "0.8.5"
